# oxidns

./: Cargo.toml  README.md  README_EN.md  SECURITY.md
.claude/: launch.json
.github/workflows/: custom-build.yml  release.yml
crates/ripset/: Cargo.toml
crates/ripset/examples/: issue127_repro.rs
crates/ripset/src/: lib.rs  nftset.rs  test_util.rs
crates/ripset/tests/harness/: mod.rs
docs/: docusaurus.config.js  package-lock.json  package.json
docs/docs/: api.mdx  intro.mdx  quickstart.mdx  releases.md
docs/docs/plugin-reference/: executor.md  executor.mdx  matcher.mdx  overview.md  provider.mdx  server.mdx
docs/src/components/: Hero.tsx
docs/src/css/: custom.css
src/: upgrade.rs
src/app/: bootstrap.rs  cli.rs
src/config/: env_expand.rs
src/core/: mod.rs
src/network/upstream/: bootstrap.rs  mod.rs  utils.rs
src/network/upstream/pool/: conn_h2.rs  conn_h3.rs  conn_quic.rs  conn_tcp.rs  conn_udp.rs  mod.rs  pool_pipeline.rs  pool_reuse.rs
src/plugin/executor/: forward.rs  upgrade.rs
src/plugin/executor/ip_selector/: probe.rs  tests.rs
src/plugin/executor/query_recorder/: api.rs  model.rs  store.rs  tests.rs
src/plugin/executor/ros_address_list/: api.rs  mod.rs
src/plugin/provider/dynamic_domain_set/: backend.rs  tests.rs
tests/: plugin_integration.rs
webui/app/: globals.css
webui/components/config/: config-editor-view.tsx
webui/components/plugins/: plugin-config-fields-editor.tsx  registry.ts
webui/lib/: oxidns-api.ts  store.ts
webui/lib/plugin-definitions/: docs.ts  executor.ts  provider.ts  shared.ts
(+18 files in other folders)
