[package]
name = "oxidns-ripset"
version = "0.1.1"
edition = "2024"
authors = ["Chen Xu <windoze@0d0a.com>", "Sven Shi <isvenshi@gmail.com>"]
homepage = "https://github.com/svenshi/oxidns/tree/main/crates/ripset"
description = "Pure Rust implementation of ipset/nftset operations via netlink, maintained for OxiDNS"
license = "MIT OR Apache-2.0"
repository = "https://github.com/svenshi/oxidns"
readme = "README.md"
keywords = ["linux", "ipset", "netlink", "nftables", "networking"]
categories = ["network-programming"]

[lib]
name = "ripset"
path = "src/lib.rs"

[dependencies]
thiserror = "2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
